--- a/TODO.txt
+++ b/TODO.txt
@@ -5,12 +5,12 @@
 - Tree Select could be a richer alternative to plain select for multiple templates, if we go the heirarchy way
 -- Org Chart could help in the organizing and creation of the heirarchy
 - Would Tree Table be better for our main table?
-- Wrap our top buttons in a Toolbar?
-- Instead of directly using charts could leverage ChartModule from PrimeNG
 
 TODO:
 - Update to Angular 17 (need PrimeNG to update first)
 -- Try server side rendering
-- Do optional reminders if a date is set in the future - load them as a list at the top of the page?
+- Reporting functionality to chart and do custom queries of data
+-- Instead of directly using charts could leverage ChartModule from PrimeNG
 - Update Readme.md once the app is close to done
 - Remove old-Utility.js once anything of value has been copied over
+- Timezone support for Reminders and general dates?
