Final pass for the night on TODOs and tasks to help organize

--- a/extra/TODO.txt
+++ b/extra/TODO.txt
@@ -5,33 +5,47 @@
 -- Org Chart could help in the organizing and creation of the heirarchy
 - Would Tree Table be better for our main table?
 
-TODO:
+MAIN FEATURES:
 - Update to Angular 17 (need PrimeNG to update first https://github.com/primefaces/primeng/issues/14063)
 -- Try server side rendering
-- Reporting functionality to chart and do custom queries of data
--- Instead of directly using charts could leverage ChartModule from PrimeNG
-- Update Readme.md once the app is close to done
-- Remove old-Utility.js once anything of value has been copied over
-- Timezone support for Reminders and general dates? Only necessary if we foresee acting on the server from a client in a different timezone
-- Do a proper pass and componentize any elements that need it
-- Might be nice to highlight any newly added Thing, especially if there are ones in the future, as sorting by date means it's hard to tell what was added
--- Alternatively do we need an "Update/Create Date" field in thing.ts and we sort under the hood by that?
-- Put our revision or version number somewhere on the page?
-- Detect browser resume on mobile devices
-- "Demo mode" (once we have user login) that lets you explore the app without changing data, with a free/auto account, and a bunch of default stuff. Could swap Storage Service for this case?
+-- Try signals and NgRx data store for sharing between parts of app
+
+- Single "Pinned" Template that puts a button on the toolbar and you can quick fill, basically 1 click
+-- Likely just confirmPopup, auto-set date to current time, and only a single text field
+--- For something repetitive we don't want to have to keep entering like Reminder / Work Commute, etc.
+
+- Reports with custom queries to generate, as well as charts (could be using ChartModule from PrimeNG)
+
+- User login, tokens for API, plus settings
+
 - Eventually do lazy loading on pagination, for large amounts of records
 -- Or dropdown of timeframe to pull data from - always simpler and cleaner in regards to sort/filter/etc.
 -- Could segment JSON our files by Year, to trim down the total number of records fetched, then have a dropdown of each year that will work against the relevant file
 --- Mostly also to stop write/updates from slowing down once you're at 10,000+ records in a single file
 --- Similarly should do monthly/yearly backups of our data files automatically on the backend
+
+- Better and more consistent and centralized logging, with levels depending on deployment/environment
+
+- Look at environment.ts setup via https://angular.io/guide/build
+
+- Do a proper pass and componentize any elements that need it
+-- Such as menu dial, including it's drag and drop features, table itself maybe?
+
+TODO:
+- Update Readme.md once the app is close to done
+- Remove old-Utility.js once anything of value has been copied over
+- Timezone support for Reminders and general dates? Only necessary if we foresee acting on the server from a client in a different timezone
+- Might be nice to highlight any newly added Thing, especially if there are ones in the future, as sorting by date means it's hard to tell what was added
+-- Alternatively do we need an "Update/Create Date" field in thing.ts and we sort under the hood by that?
+- Put our revision or version number somewhere on the page?
+- Detect browser resume on mobile devices
+- "Demo mode" (once we have user login) that lets you explore the app without changing data, with a free/auto account, and a bunch of default stuff. Could swap Storage Service for this case?
 - Manage tabIndex focus order, especially for mobile
 - Would be nice to not have to manually set `tooltipPosition="left"` (or bottom) in cases where the tooltip is smooshed along the right edge. Seems to autocalculate for some but not all
 -- File a bug with PrimeNG?
 - Tweak loading states so the entire table doesn't disappear while fetching
 - Eventually have Photo as a type to upload images to Things
-- Better and more consistent and centralized logging, with levels depending on deployment/environment
 - Look at date-fns (currently used) vs Day.js vs Luxon, consider bundle size and features used
-- 'is-mobile' is a CommonJS module, try to find a more modern replacement?
 - Where does Inter-roman and Inter-italic font come from? PrimeNG? Slightly big size
-- Look at environment.ts setup via https://angular.io/guide/build
 - Have a "looking back" / "remember this?" feature that shows you memories from the same time X months/years ago, sort of like Facebook. Toggleable option of course
+- Have an "annual repeat" feature for reminders, likely don't want more granular as we're not intending to be a full scheduling app
