Keeping versions up to date, PrimeNG to 17.1, Ang to 17.x latest. Reverted Lara theme to v16 PrimeNG, because v17 is washed out and looks terrible. Across the app moved to new Ang17 control flow style of @if instead of *ngIf

--- a/extra/TODO.txt
+++ b/extra/TODO.txt
@@ -1,7 +1,7 @@
 MAIN FEATURES:
 BLOCK- User login, tokens for API, plus settings/profile page
 
-BLOCK- Validation across the app - from 'required' custom fields to dialogs, etc.
+BLOCK- Validation across the app - from 'required' custom fields to dialogs, to checks before saving/using the backend, etc.
 
 - Better and more consistent and centralized logging, with levels depending on deployment/environment
 
@@ -19,7 +19,6 @@ BLOCK- Validation across the app - from 'required' custom fields to dialogs, etc
 TODO:
 - Try server side rendering using Ang 17
 - Try signals and NgRx data store for sharing between parts of app using Ang 17
-- Try new control flow instead of ngIf/ngFor, etc. from Ang 17
 - Update Readme.md once the app is close to done
 - Remove old-Utility.js once anything of value has been copied over
 - Timezone support for Reminders and general dates? Only necessary if we foresee acting on the server from a client in a different timezone
@@ -29,10 +28,10 @@ TODO:
 - Manage tabIndex focus order, especially for mobile
 - Tweak loading states so the entire table doesn't disappear while fetching
 - Eventually have Photo as a type to upload images to Things
-- Where does Inter-roman and Inter-italic font come from? PrimeNG? Slightly big size
 - Have a "looking back" / "remember this?" feature that shows you memories from the same time X months/years ago, sort of like Facebook. Toggleable option of course
 - Have an "annual repeat" feature for reminders, likely don't want more granular as we're not intending to be a full scheduling app
-- Autosort template list (when adding a new Thing) by grouped select items of Regularly Used, less frequent, etc.
+- Autosort template dropdown (when adding a new Thing) by grouped select items of Regularly Used, less frequent, etc.
+- Try Bun.js as a drop in replacement for Node?
 
 LOADING:
 - Block entire page, header and all, with a spinner in the middle (after a couple seconds, to prevent flashing)
