--- a/extra/TODO.txt
+++ b/extra/TODO.txt
@@ -6,12 +6,12 @@ BLOCK- Validation across the app - from 'required' custom fields to dialogs, to 
 - Better and more consistent and centralized logging, with levels depending on deployment/environment
 
 - Do a proper pass and componentize any elements that need it
+-- Also make sure existing components are "standalone: true" where possible
 -- Such as menu dial, including it's drag and drop features, table itself maybe?
 
 - Reports with custom queries to generate, as well as charts (could be using ChartModule from PrimeNG)
 
 TODO:
-- Try server side rendering using Ang 17
 - Try signals and NgRx data store for sharing between parts of app using Ang 17
 - Update Readme.md once the app is close to done
 - Remove old-Utility.js once anything of value has been copied over
@@ -19,8 +19,7 @@ TODO:
 - Put our revision or version number somewhere on the page? Pulled from environment file automatically?
 - Detect browser resume on mobile devices
 - "Demo mode" (once we have user login) that lets you explore the app without changing data, with a free/auto account, and a bunch of default stuff. Could swap Storage Service for this case?
-- Manage tabIndex focus order, especially for mobile
-- Tweak loading states so the entire table doesn't disappear while fetching
+- Manage tabIndex focus order, especially for mobile (so for example we can press Next, Next, Go on the floating keyboard)
 - Eventually have Photo as a type to upload images to Things
 - Have a "looking back" / "remember this?" feature that shows you memories from the same time X months/years ago, sort of like Facebook. Toggleable option of course
 - Have an "annual repeat" feature for reminders, likely don't want more granular as we're not intending to be a full scheduling app
@@ -47,7 +46,7 @@ LOADING:
 PRIMENG BUGS:
 - Would be nice to not have to manually set `tooltipPosition="left"` (or bottom) in cases where the tooltip is smooshed along the right edge. Seems to autocalculate for some but not all
 - Speed Dial has an overlay that extends below the visible button by 44px
-*- FILED: https://github.com/primefaces/primeng/issues/14330
+*- FILED - they marked WONTFIX: https://github.com/primefaces/primeng/issues/14330
 -- Inspect around the Speed Dial to see
 -- This blocks the Selected Rows clear button when a reminder is present (as the table gets pushed down and becomes below the overlay)
 -- A hacky solution could be to move the dial down when the Reminders are shown, but the view would jump and it's a lot of math if we have multiple reminders
